--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -10,7 +10,8 @@
     <div class="container" id="nav">
         <h1 class="logo"><a href="">app开发公司,山东app开发,app定制开发</a></h1>
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -24,16 +25,21 @@
                 <li><a href="{:cmf_url('portal/apps/xcx')}"><span>微信小程序开发</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/wlw')}"><span>成品软件</span></a></li>
                 <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>产品与解决方案<em class="caret"></em></span></a>
+                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false"><span>产品与解决方案<em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
                         <a href="waste_disposal.html" rel="nofollow" target="_blank">仿鱼泡网</a>
                         <a href="znjsxt.html" rel="nofollow" target="_blank">仿Boss直聘</a>
                         <a href="znwyxt.html" rel="nofollow" target="_blank">云遗嘱</a>
                     </ul>
                 </li>
-                <li><a href="86.html"><span>成功案例</span></a></li>
-                <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>开发资讯 <em class="caret"></em></span></a>
+                <li><a href="{:cmf_url('portal/apps/suc')}"><span>成功案例</span></a></li>
+                <li><a href="{:cmf_url('portal/about/contact')}"><span>开发资讯</span></a></li>
+                <li><a href="{:cmf_url('portal/about/index')}"><span>关于我们</span></a></li>
+                <li><a href="{:cmf_url('portal/about/contact')}"><span>联系我们</span></a></li>
+                <!-- <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false"><span>开发资讯 <em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
                         <a href="71.html">APP业界资讯</a>
                         <a href="69.html">iOS APP开发资讯</a>
@@ -44,13 +50,15 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span>关于我们 <em class="caret"></em></span></a>
+                    <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                        aria-haspopup="true" aria-expanded="false"><span>关于我们 <em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
                         <a href="gsjj.html" rel="nofollow">关于真略</a>
                         <a href="contact.html" rel="nofollow">联系我们</a>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
 </nav>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
