--- a/public/themes/simpleboot3/portal/wlw.html
+++ b/public/themes/simpleboot3/portal/wlw.html
@@ -27,7 +27,7 @@
 
 <body>
     <div id="position" class="none">
-        <p>当前位置：<a href="index.html">网站首页</a> > <a>成品软件</a></p>
+        <p>当前位置：<a href="index.html">网站首页</a> > <a>软件产品</a></p>
     </div>
     <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
     <include file="public@head" />
