--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -8,10 +8,10 @@
     <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/swiper.css" rel="stylesheet" type="text/css" media="all">
-    <title>上海app开发_app定制开发_app开发公司 - 上海真略</title>
-    <meta name="keywords" content="上海app开发,上海app制作,app定制开发,app开发公司">
+    <title>德州一帆-{$site_info.site_name|default=''}</title>
+    <meta name="keywords" content="{$site_info.site_seo_keywords|default=''}">
     <meta name="description"
-        content="上海真略app开发公司(400-663-9990)致力于IOS、android APP开发手机APP应用软件,为客户提供一站式手机APP开发解决方案的上海app外包开发商.上海app制作开发就选上海真略!">
+        content="{$site_info.site_seo_description|default=''}">
     <link rel="canonical" href="">
     <!--[if lt IE 9]>
      <script src="/templates/main/js/html5shiv.min.js"></script>
