--- a/public/themes/simpleboot3/portal/list.html
+++ b/public/themes/simpleboot3/portal/list.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-    <link href="static/css/main.css" rel="stylesheet" type="text/css" media="all">
-    <link href="static/css/animate.css" rel="stylesheet" type="text/css" media="all">
+    <link href="__TMPL__/public/assets/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
+    <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet" type="text/css" media="all">
+    <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <title>微信小程序资讯 - 第1页 - 上海真略</title>
     <meta name="keywords" content="微信小程序资讯">
     <meta name="description" content="">
@@ -15,7 +15,7 @@
     <![endif]-->
 </head>
 <body>
-<script type="text/javascript" src="static/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
 <div id="position" class="none">
     <p>当前位置：<a href="index.html">网站首页</a> > <a>开发资讯</a></p>
 </div>
@@ -36,9 +36,9 @@
 
     });
 </script>
-<script type="text/javascript" src="static/js/dh.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/dh.js"></script>
 
-<img src="static/picture/news_banner.jpg" width="100%">
+<img src="__TMPL__/public/assets/static/picture/news_banner.jpg" width="100%">
 <div class="newsout">
     <div class="container newsoutjl">
         <div class="news_location">
@@ -304,28 +304,28 @@
 <div class="slider_nav">
     <ul>
         <li class="ht">
-            <div class="ht1"><img src="static/picture/silder1.png" alt="上海APP开发400电话">
+            <div class="ht1"><img src="__TMPL__/public/assets/static/picture/silder1.png" alt="上海APP开发400电话">
                 <div class="ht2">18952265600</div>
             </div>
         </li>
         <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
-        <li><a href="index.html#xuqiu" rel="nofollow"><img src="static/picture/silder3.png" alt="咨询项目经理"></a></li>
+        <li><a href="index.html#xuqiu" rel="nofollow"><img src="__TMPL__/public/assets/static/picture/silder3.png" alt="咨询项目经理"></a></li>
         <li class="wx">
-            <img src="static/picture/silder4.png">
-            <div class="code"><img src="static/picture/code1.png" alt="上海APP开发微信公众号"></div>
+            <img src="__TMPL__/public/assets/static/picture/silder4.png">
+            <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
         </li>
     </ul>
 </div>
 <div class="mb_tel">
-    <a href="tel:400-663-9990"><img src="static/picture/silder1.png"></a>
+    <a href="tel:400-663-9990"><img src="__TMPL__/public/assets/static/picture/silder1.png"></a>
 </div>
-<link rel="stylesheet" href="static/css/validate.css">
-<link type="text/css" rel="stylesheet" href="static/css/pagination.css">
-<link type="text/css" rel="stylesheet" href="static/css/ui-dialog.css">
-<script type="text/javascript" src="static/js/jquery.form.min.js"></script>
-<script type="text/javascript" src="static/js/Validform_v5.3.2_min.js"></script>
-<script type="text/javascript" src="static/js/dialog-plus-min.js"></script>
-<script type="text/javascript" src="static/js/common.js"></script>
+<link rel="stylesheet" href="__TMPL__/public/assets/static/css/validate.css">
+<link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/pagination.css">
+<link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/ui-dialog.css">
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery.form.min.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/Validform_v5.3.2_min.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/dialog-plus-min.js"></script>
+<script type="text/javascript" src="__TMPL__/public/assets/static/js/common.js"></script>
 <script type="text/javascript">
     $(function () {
         //初始化发表评论表单
@@ -353,7 +353,7 @@
                 </li>
                 <li style="margin-top: 2px;">
                     <a href="javascript:;" onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;">
-                        <img src="static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span
+                        <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span
                         class="Validform_checktip"></span></li>
                 <li>
                     <button type="submit" id="btnSubmit" name="btnSubmit" class="btn btn-default tjxmxq">提交需求</button>
@@ -364,9 +364,9 @@
 </div>
 <include file="public@footer"/>
 
-<script src="static/js/bootstrap.min.js"></script>
+<script src="__TMPL__/public/assets/static/js/bootstrap.min.js"></script>
 <div class="clear"></div>
-<script src="static/js/wow.min.js"></script>
+<script src="__TMPL__/public/assets/static/js/wow.min.js"></script>
 <script>
     if (!(/msie [6|7|8|9]/i.test(navigator.userAgent))) {
         new WOW().init();
