--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -24,7 +24,7 @@
                 <li><a href="{:cmf_url('portal/apps/wlw')}"><span>软件产品</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/index')}"><span>APP开发</span></a></li>
                 <li><a href="{:cmf_url('portal/apps/xcx')}"><span>微信小程序开发</span></a></li>
-                <li class="dropdown">
+<!--                <li class="dropdown">
                     <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button"
                         aria-haspopup="true" aria-expanded="false"><span>产品与解决方案<em class="caret"></em></span></a>
                     <ul class="dropdown-menu">
@@ -32,9 +32,9 @@
                         <a href="znjsxt.html" rel="nofollow" target="_blank">仿Boss直聘</a>
                         <a href="znwyxt.html" rel="nofollow" target="_blank">云遗嘱</a>
                     </ul>
-                </li>
+                </li>-->
                 <li><a href="{:cmf_url('portal/apps/suc')}"><span>成功案例</span></a></li>
-                <li><a href="{:cmf_url('portal/about/contact')}"><span>开发资讯</span></a></li>
+                <li><a href="{:cmf_url('portal/List/index',array('id'=>22))}"><span>开发资讯</span></a></li>
                 <li><a href="{:cmf_url('portal/about/index')}"><span>关于我们</span></a></li>
                 <li><a href="{:cmf_url('portal/about/contact')}"><span>联系我们</span></a></li>
                 <!-- <li class="dropdown">
