--- a/public/themes/simpleboot3/portal/wlw.html
+++ b/public/themes/simpleboot3/portal/wlw.html
@@ -9,12 +9,12 @@
     <link href="__TMPL__/public/assets/static/css/banner.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/fonts.css" rel="stylesheet" type="text/css" media="all">
-    <title>物联网与大数据开发 - 上海真略</title>
-    <meta name="Keywords" content="物联网开发,大数据开发">
+    <title>成品软件 - 德州一帆</title>
+    <meta name="Keywords" content="成品软件">
     <meta name="Description" content="">
     <!--[if lt IE 9]>
- <script src="/templates/main/js/html5shiv.min.js"></script>
- <script src="/templates/main/js/respond.min.js"></script>
+ <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
+ <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
 <![endif]-->
     <script language="javascript" type="text/javascript">
         function g (o) { return document.getElementById(o); }
