--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -16,8 +16,8 @@
     <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/pagination.css">
     <link type="text/css" rel="stylesheet" href="__TMPL__/public/assets/static/css/ui-dialog.css">
     <!--[if lt IE 9]>
-  <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+  <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
+  <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
 <![endif]-->
 </head>
 <body>
