--- a/public/themes/simpleboot3/portal/gsjj.html
+++ b/public/themes/simpleboot3/portal/gsjj.html
@@ -13,8 +13,8 @@
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
     <link href="__TMPL__/public/assets/static/css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
-  <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+  <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
+  <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
 <![endif]-->
 </head>
 <body>
