调用咨询类模板标签

--- a/public/themes/simpleboot3/portal/list.html
+++ b/public/themes/simpleboot3/portal/list.html
@@ -13,6 +13,7 @@
     <script src="/templates/main/js/html5shiv.min.js"></script>
     <script src="/templates/main/js/respond.min.js"></script>
     <![endif]-->
+    <taglib name="app\portal\taglib\Portal"/>
 </head>
 <body>
 <script type="text/javascript" src="__TMPL__/public/assets/static/js/jquery-1.11.2.min.js"></script>
@@ -118,186 +119,50 @@
             <div class="newscblpic"></div>
         </div>
         <div class="col-md-9 newalscon">
-
+            <php>
+                $where= function($query){
+                $query->where('post.create_time','>=',0);
+                };
+                $page=[
+                'list_rows'=>10,
+                'next'=>'下一页',
+                'prev'=>'上一页'
+                ];
+            </php>
+            <portal:articles item="vo" where="$where" order="post.create_time DESC" page="$page"
+                             relation="categories"
+                             categoryIds="$category.id"
+                             returnVarName="articles_data">
             <div class="newslist">
                 <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>21</span><br>2019-02</div>
+                    <div class="newalscontime"><span>{:date('d',$vo.published_time)}</span><br>{:date('Y-m',$vo.published_time)}</div>
                 </div>
                 <div class="newsjianjie">
                     <div class="newsname">
-                        <a href="show-779.html">
-                            <div class="newsname-l">某电器小程序的功能解决方案</div>
+                        <a href="{:cmf_url('portal/Article/index',array('id'=>$vo['id'],'cid'=>$category['id']))}">
+                            <div class="newsname-l">{$vo.post_title}</div>
                         </a>
                         <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=779&click=1"></script>
+                            {$vo.post_hits}</script>
                             次
                         </div>
                     </div>
-                    <div class="newscontent">某电器小程序功能说明
-                        模块名称功能描述登录微信授权登录线上活动报名1、通过直接打开微信小程序或者扫描（识别）二维码进入到活动页2、活动券领取：用户先填写个人的姓名、电话、所在城市（下拉选择）、预购家电选择等必填资料，然后点击领取，系统提示领取成功3、短信通知：…
-                    </div>
+                    <div class="newscontent">{$vo.post_excerpt}</div>
                     <div class="phonetime">
-                        <div class="phonetime-l">2019-02-21</div>
+                        <div class="phonetime-l">{:date('Y-m-d',$vo.published_time)}</div>
                         <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=779&click=1"></script>
+                            {$vo.post_like}
                             次
                         </div>
                     </div>
                 </div>
             </div>
+            </portal:articles>
 
-            <div class="newslist">
-                <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>17</span><br>2019-01</div>
-                </div>
-                <div class="newsjianjie">
-                    <div class="newsname">
-                        <a href="show-757.html">
-                            <div class="newsname-l">开发小程序需具备的思维方式</div>
-                        </a>
-                        <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=757&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                    <div class="newscontent">
-                        自从小程序上线至今，我们基本上每天都能看到某小程序成为爆款产品，或者某小程序获得百万千万元的融资的新闻报道。这表明，小程序的开发是一种不可逆转的大趋势，值得企业重视。然而，很多客户往往对自己的产品开发充满很多期待，往往寄希望于开发一个小程序就能立马走红，获…
-                    </div>
-                    <div class="phonetime">
-                        <div class="phonetime-l">2019-01-17</div>
-                        <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=757&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                </div>
+            <div aria-label="Page navigation" class="text-center my_pagination">
+                <page/>
+
             </div>
-
-            <div class="newslist">
-                <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>16</span><br>2019-01</div>
-                </div>
-                <div class="newsjianjie">
-                    <div class="newsname">
-                        <a href="show-756.html">
-                            <div class="newsname-l">通知：微信小程序审核团队要放假啦</div>
-                        </a>
-                        <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=756&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                    <div class="newscontent">
-                        春节临近，很多机构都提前进入节假模式，上海真略也接到很多用户为配合节前的营销，想趁着春节上线属于自己的小程序的咨询。不过我们发现很多用户对小程序不是很了解，以为不需要审核，只要找家公司设计开发一下就能直接使用了。最近微信支付宝，都公布了小程序假期审核调整的…
-                    </div>
-                    <div class="phonetime">
-                        <div class="phonetime-l">2019-01-16</div>
-                        <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=756&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="newslist">
-                <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>16</span><br>2019-01</div>
-                </div>
-                <div class="newsjianjie">
-                    <div class="newsname">
-                        <a href="show-755.html">
-                            <div class="newsname-l">微信流量入口之附近的小程序</div>
-                        </a>
-                        <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=755&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                    <div class="newscontent">
-                        说到小程序的价值,这可以说是目前移动互联的重中之重了！用户只要打开聊天软件：点击发现→附近的小程序，就能看到定位在当时所处位置周围5km的注册的功能各异小程序，这个功能对有线下店面的公司来说是一大神级功能。对于零售企业来说：如果客户是有购物需求的，通过搜索店家…
-                    </div>
-                    <div class="phonetime">
-                        <div class="phonetime-l">2019-01-16</div>
-                        <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=755&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="newslist">
-                <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>15</span><br>2019-01</div>
-                </div>
-                <div class="newsjianjie">
-                    <div class="newsname">
-                        <a href="show-753.html">
-                            <div class="newsname-l">小程序对于律师行业营销的优势解析</div>
-                        </a>
-                        <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=753&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                    <div class="newscontent">
-                        如今，移动互联使用人数剧增，微信功不可没。对于律师行业来说，微信的价值在于：（1）庞大：极其庞大的用户群体（2）习惯：已经成为一种生活方式（3）传播：分享朋友圈、口碑迅速传播（4）精准：多样化信息推送、快速直达首先，微信于律师行业经营的好处：1、建立更强的关系建…
-                    </div>
-                    <div class="phonetime">
-                        <div class="phonetime-l">2019-01-15</div>
-                        <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=753&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="newslist">
-                <div class="newstimecon phoneyc">
-                    <div class="newalscontime"><span>13</span><br>2019-01</div>
-                </div>
-                <div class="newsjianjie">
-                    <div class="newsname">
-                        <a href="show-751.html">
-                            <div class="newsname-l">小程序对于传统教育行业有哪些利好？</div>
-                        </a>
-                        <div class="newsname-r phoneyc">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=751&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                    <div class="newscontent">
-                        小程序发展时间不长，但由于嵌入在微信这个巨大的流量入口中，重要程度自然不言而喻了。今天真略小编跟大家说说，小程序对于传统教育行业有哪些利好？一、营销方面有一定的品牌效应。与时俱进，有了小程序，感觉有实力，家长会在教学差不多的情况下，最后选择了这里学习。5公里…
-                    </div>
-                    <div class="phonetime">
-                        <div class="phonetime-l">2019-01-13</div>
-                        <div class="phonetime-r">浏览
-                            <script type="text/javascript"
-                                    src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=751&click=1"></script>
-                            次
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <nav aria-label="Page navigation" class="text-center my_pagination">
-                <span>共46记录</span><span class="disabled">«上一页</span><span class="current">1</span><a
-                    href="javascript:;">2</a><a href="javascript:;">3</a><a href="javascript:;">4</a><span>...</span><a
-                    href="javascript:;">8</a><a href="javascript:;">下一页»</a>
-            </nav>
         </div>
     </div>
 </div>
@@ -309,7 +174,8 @@
             </div>
         </li>
         <!--<li><a href="http://wpa.qq.com/msgrd?v=3&uin=603233758&site=qq&menu=yes" target="_blank"><img src="/templates/main/images/silder2.png" alt="QQ在线咨询"/></a></li>-->
-        <li><a href="index.html#xuqiu" rel="nofollow"><img src="__TMPL__/public/assets/static/picture/silder3.png" alt="咨询项目经理"></a></li>
+        <li><a href="index.html#xuqiu" rel="nofollow"><img src="__TMPL__/public/assets/static/picture/silder3.png"
+                                                           alt="咨询项目经理"></a></li>
         <li class="wx">
             <img src="__TMPL__/public/assets/static/picture/silder4.png">
             <div class="code"><img src="__TMPL__/public/assets/static/picture/code1.png" alt="上海APP开发微信公众号"></div>
@@ -353,7 +219,8 @@
                 </li>
                 <li style="margin-top: 2px;">
                     <a href="javascript:;" onclick="ToggleCode(this, '/tools/verify_code.ashx');return false;">
-                        <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35" align="absmiddle"></a><span
+                        <img src="__TMPL__/public/assets/static/picture/verify_code.ashx" width="80" height="35"
+                             align="absmiddle"></a><span
                         class="Validform_checktip"></span></li>
                 <li>
                     <button type="submit" id="btnSubmit" name="btnSubmit" class="btn btn-default tjxmxq">提交需求</button>
