--- a/public/themes/simpleboot3/portal/article.html
+++ b/public/themes/simpleboot3/portal/article.html
@@ -13,6 +13,7 @@
     <script src="__TMPL__/public/assets/static/js/html5shiv.min.js"></script>
     <script src="__TMPL__/public/assets/static/js/respond.min.js"></script>
     <![endif]-->
+    <taglib name="app\portal\taglib\Portal"/>
 </head>
 <body>
 <div id="position" class="none">
@@ -40,43 +41,33 @@
 <div class="newsout">
     <div class="container wow bounceIn">
         <div class="news_location">
-            <p>当前位置：<a href="index.html">网站首页</a>&nbsp;&gt;&nbsp;<a href="53.html">app资讯</a>&nbsp;&gt;&nbsp;<a
-                    href="70.html">Android APP开发资讯</a></p>
+            <p>当前位置：<a href="{:cmf_url('portal/Index/index')}">网站首页</a>&nbsp;
+                <portal:breadcrumb cid="category.id" self="true">
+                    &gt; <a href="{:url('portal/List/index',['id'=>$vo['id']])}">{$vo.name}</a> &gt;
+                </portal:breadcrumb>
+            </p>
         </div>
         <div class="col-md-9 newalscon">
-            <div class="newsxqtitle"><h1 class="newsxqtitle">上海Android工程师看APP市场前景</h1></div>
+            <div class="newsxqtitle"><h1 class="newsxqtitle">{$article.post_title}</h1></div>
             <div class="newsxqxtitle">
-                <div><span>来源：上海真略科技有限公司 </span><span>发布时间：2015-11-26</span><span>浏览<script type="text/javascript"
-                                                                                            src="http://www.cnzlapp.com/tools/submit_ajax.ashx?action=view_article_click&id=173&click=1"></script>次</span>
+                <div><span>来源：{$article.post_source} </span><span>发布时间：{:date('Y-m-d',$article.published_time)}</span><span>浏览{$article.post_hits}次</span>
                 </div>
             </div>
             <div class="news_show_content">
-                <p>
-                    IT，Information
-                    Technonoly，一个比较高端的行业，我问过不懂这方面的人，他们的回答“我就感觉是玩电脑的”“神圣的”“神奇的”，可见除了一线城市这一行比较普遍，大多城市IT行业寥寥无几，人们对这一行的认识也很浅，在北京这些年，身边的同事几乎都是小城市的，有一部分继续留在上海的原因是家里没有这一行业，没办法回家，幸运的我，在家找到了这样的企业。
-                </p>
-                <p style="text-align:center;">
-                    <img src="__TMPL__/public/assets/static/picture/201511260956322050.jpg" alt="">
-                </p>
-                <p>
-                    这一行业早已经来到了我们身边，而且占我们生活的比重正在慢慢增加，嘀嘀打车，网上购物，等等，最近，前首富王健林已经跌出前三甲，阿里的马云，百度的李彦宏，腾讯的马化腾，前三，可见这一行的钱景，他们全部是互联网行业，三大巨头的地位没那么好动摇，所以很多IT企业选择了在三大巨头的夹缝中生存。
-                </p>
-                <p>
-                    现在，人们已经离不开了手机，电脑端短时间内肯定玩不出什么新花样，已经很成熟了，移动端正在崛起，去年网上购物，移动端占14%，估计今年应该能上30%。马云的一系列策略推广天猫的移动端，阿里去年移动端交易额在移动网络购物市场整体中占比80%多，大半壁江山啊。
-                </p>
-                <p style="text-align:center;">
-                    <img src="__TMPL__/public/assets/static/picture/201511260950232333.jpg" alt="">
-                </p>
-                <p>
-                    今年双11，阿里交易额达912.17亿元,11月11日零点的前几分钟，超过70%的订单来自于移动端，最终，移动端交易额占比比去年的15%整整翻了3倍。购物的全球化和移动化已经很成熟了，相信其他行业的移动化离我们也会越来越近。
-                </p>
-                <p>
-                    上海真略APP开发公司诚招Android工程师、iOS工程师，如果你有独立开发的能力，联系我们吧！
-                </p>
+                {$article.post_content}
             </div>
             <div class="newsxqbottom">
-                <div class="newsxqbottom-l">上一篇：<a href="show-169.html">安卓市场App运营的潜规则</a></div>
-                <div class="newsxqbottom-r">下一篇：<a href="javascript:;">上海安卓APP定制开发的几大准则</a></div>
+                <php>
+                    $after_content_hook_param=[
+                    'object_id'=>$article['id'],
+                    'table_name'=>'portal_post',
+                    'object_title'=>$article['post_title'],
+                    'user_id'=>$article['user_id'],
+                    'url'=>cmf_url_encode('portal/Article/index',array('id'=>$article['id'],'cid'=>$category['id'])),
+                    'object'=>$article
+                    ];
+                </php>
+                <hook name="after_content" param="after_content_hook_param"/>
             </div>
         </div>
         <div class="col-md-3 phoneyc phoneyr">
